fixed form submit on mobile and added errors

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -94,6 +94,10 @@ select {
 	}
 }
 
+.form-error {
+	margin: 10px 2px;
+	color: red; 
+}
   
 
 
